# crawler

./: .gitignore  README.md  constants.py  en_stats.py  main.py  pyproject.toml  utils.py  zh_stats.py  zipf.py
data/: wikipedia_crawler.py
figures/en/10000000/: entropy_log.txt
figures/en/1666666/: entropy_log.txt
figures/en/3333332/: entropy_log.txt
figures/en/4999998/: entropy_log.txt
figures/en/6666664/: entropy_log.txt
figures/en/8333330/: entropy_log.txt
figures/zh/10000000/: entropy_log.txt
figures/zh/1666666/: entropy_log.txt
figures/zh/3333332/: entropy_log.txt
figures/zh/4999998/: entropy_log.txt
figures/zh/6666664/: entropy_log.txt
figures/zh/8333330/: entropy_log.txt
scripts/: en_scrawler.sh  zh_scrawler.sh
