[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "jieba>=0.42.1",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "requests>=2.32.5",
]

[tool.uv.workspace]
members = [
    "text",
]
